# ict

./: LICENSE  README.md
mobiele_apps/Mobiele apps voor dummys/: Mezelf voorbereiden voor mobiele apps voor dummys.docx
software_engineering4/: LINQ.md  README.md
webcontrollers/python_api/: api.py  benchmark.sh  testbench.py
webcontrollers/rust_ws_api/: .env  Cargo.toml  benchmark.sh  main.rs  testbench.py
webcontrollers/rust_ws_api/log/: mod.rs
webcontrollers/rust_ws_api/repository/: mod.rs
webcontrollers/rust_ws_api/request/: mod.rs
webcontrollers/rust_ws_api/schema/: mod.rs
